# Orbital

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  auditreport.md  deployment.json
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  .gitignore  package-lock.json  package.json
backend/scripts/: migrate.ts  seed.ts
backend/src/: index.ts
backend/src/analytics/: snapshots.ts
backend/src/api/: server.ts
backend/src/db/: client.ts  schema.sql
backend/src/indexer/: discovery.ts  events.ts  stellar.ts
backend/src/lib/: tokenSymbols.ts
contracts/: Cargo.toml  Makefile  README.md
contracts/pool_factory/: Cargo.toml
contracts/pool_factory/src/: events.rs  lib.rs  storage.rs  test.rs
contracts/router/: Cargo.toml
contracts/router/src/: lib.rs  storage.rs  test.rs
contracts/stable_pool/: Cargo.toml
contracts/stable_pool/src/: errors.rs  events.rs  lib.rs  math.rs  storage.rs  test.rs  test_lp_profit.rs
docs/: ARCHITECTURE.md
frontend/: .env.example  package-lock.json  package.json  vitest.config.ts
frontend/src/__tests__/: Button.test.tsx  contract-errors.test.ts  contract-utils.test.ts  stellar-utils.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuroraBackground.tsx  FeaturesSection.tsx  Footer.tsx  GettingStarted.tsx  MarketSection.tsx  NavBar.tsx  ParticleField.tsx
frontend/src/hooks/: usePoolEvents.ts  useProtocolStats.ts  useRouterSwap.ts  useTokenBalance.ts  useTrustlines.ts  useWallet.ts
frontend/src/lib/: contract.ts  contractErrors.ts  (+4 more)
scripts/: deploy_testnet.sh
(+14 files in other folders)
